--- a/LLP.bib
+++ b/LLP.bib
@@ -440,10 +440,6 @@
       year          = "2015",
       reportNumber  = "CERN-PH-EP-2015-242",
       url           = "http://cds.cern.ch/record/2103375",
-      note          = "34 pages plus author list + 1 cover pages (51 pages
-                       total), 13 figures, 14 tables, submitted to JHEP All
-                       figures including auxiliary figures are available at
-                       http://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PAPERS/EXOT-2014-09/",
       doi           = "10.1007/JHEP02(2016)062",
 }
 
@@ -459,3 +455,212 @@
       reportNumber  = "CMS-PAS-EXO-12-035",
       url           = "https://cds.cern.ch/record/2063495",
 }
+
+@article{mCPProposal,
+      author         = "Haas, Andrew and Hill, Christopher S. and Izaguirre, Eder
+                        and Yavin, Itay",
+      title          = "{Looking for milli-charged particles with a new
+                        experiment at the LHC}",
+      journal        = "Phys. Lett.",
+      volume         = "B746",
+      year           = "2015",
+      pages          = "117-120",
+      doi            = "10.1016/j.physletb.2015.04.062",
+      eprint         = "1410.6816",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1410.6816;%%"
+}
+
+@article{MoEDALTDR,
+      author         = "Pinfold, James and others",
+      title          = "{Technical Design Report of the MoEDAL Experiment}",
+      collaboration  = "MoEDAL",
+      year           = "2009",
+      reportNumber   = "CERN-LHCC-2009-006, MoEDAL-TDR-001",
+      SLACcitation   = "%%CITATION = CERN-LHCC-2009-006;%%"
+}
+
+@article{mCPnoncollider,
+      author         = "Jaeckel, Joerg and Ringwald, Andreas",
+      title          = "{The Low-Energy Frontier of Particle Physics}",
+      journal        = "Ann. Rev. Nucl. Part. Sci.",
+      volume         = "60",
+      year           = "2010",
+      pages          = "405-437",
+      doi            = "10.1146/annurev.nucl.012809.104433",
+      eprint         = "1002.0329",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CPT-10-18, DESY-10-016, IPPP-10-09",
+      SLACcitation   = "%%CITATION = ARXIV:1002.0329;%%"
+}
+
+@article{mCPlambshift,
+      author         = "Gluck, M. and Rakshit, S. and Reya, E.",
+      title          = "{The Lamb shift contribution of very light milli-charged
+                        fermions}",
+      journal        = "Phys. Rev.",
+      volume         = "D76",
+      year           = "2007",
+      pages          = "091701",
+      doi            = "10.1103/PhysRevD.76.091701",
+      eprint         = "hep-ph/0703140",
+      archivePrefix  = "arXiv",
+      primaryClass   = "HEP-PH",
+      reportNumber   = "DO-TH-07-04",
+      SLACcitation   = "%%CITATION = HEP-PH/0703140;%%"
+}
+
+@article{mCPwithBBN,
+      author         = "Davidson, Sacha and Hannestad, Steen and Raffelt, Georg",
+      title          = "{Updated bounds on millicharged particles}",
+      journal        = "JHEP",
+      volume         = "05",
+      year           = "2000",
+      pages          = "003",
+      doi            = "10.1088/1126-6708/2000/05/003",
+      eprint         = "hep-ph/0001179",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-TH-99-384",
+      SLACcitation   = "%%CITATION = HEP-PH/0001179;%%"
+}
+
+@article{mCPaccecavity,
+      author         = "Gies, H. and Jaeckel, J. and Ringwald, A.",
+      title          = "{Accelerator Cavities as a Probe of Millicharged
+                        Particles}",
+      journal        = "Europhys. Lett.",
+      volume         = "76",
+      year           = "2006",
+      pages          = "794-800",
+      doi            = "10.1209/epl/i2006-10356-5",
+      eprint         = "hep-ph/0608238",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-06-132",
+      SLACcitation   = "%%CITATION = HEP-PH/0608238;%%"
+}
+@article{mCPCMB,
+      author         = "Dubovsky, S. L. and Gorbunov, D. S. and Rubtsov, G. I.",
+      title          = "{Narrowing the window for millicharged particles by CMB
+                        anisotropy}",
+      journal        = "JETP Lett.",
+      volume         = "79",
+      year           = "2004",
+      pages          = "1-5",
+      doi            = "10.1134/1.1675909",
+      note           = "[Pisma Zh. Eksp. Teor. Fiz.79,3(2004)]",
+      eprint         = "hep-ph/0311189",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "INR-TH-2003-8",
+      SLACcitation   = "%%CITATION = HEP-PH/0311189;%%"
+}
+@article{mCPCMB2,
+      author         = "Burrage, C. and Jaeckel, J. and Redondo, J. and Ringwald,
+                        A.",
+      title          = "{Late time CMB anisotropies constrain mini-charged
+                        particles}",
+      journal        = "JCAP",
+      volume         = "0911",
+      year           = "2009",
+      pages          = "002",
+      doi            = "10.1088/1475-7516/2009/11/002",
+      eprint         = "0909.0649",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      reportNumber   = "DESY-09-132, DCPT-09-124, IPPP-09-62",
+      SLACcitation   = "%%CITATION = ARXIV:0909.0649;%%"
+}
+@article{mCPHubble,
+      author         = "Ahlers, Markus",
+      title          = "{The Hubble diagram as a probe of mini-charged
+                        particles}",
+      journal        = "Phys. Rev.",
+      volume         = "D80",
+      year           = "2009",
+      pages          = "023513",
+      doi            = "10.1103/PhysRevD.80.023513",
+      eprint         = "0904.0998",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "OUTP-0908P",
+      SLACcitation   = "%%CITATION = ARXIV:0904.0998;%%"
+}
+@article{mCPLaser,
+      author         = "Ahlers, M. and Gies, H. and Jaeckel, J. and Redondo, J.
+                        and Ringwald, A.",
+      title          = "{Laser experiments explore the hidden sector}",
+      journal        = "Phys. Rev.",
+      volume         = "D77",
+      year           = "2008",
+      pages          = "095001",
+      doi            = "10.1103/PhysRevD.77.095001",
+      eprint         = "0711.4991",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-07-207, OUTP-0715P, IPPP-07-93, DCPT-07-186",
+      SLACcitation   = "%%CITATION = ARXIV:0711.4991;%%"
+}
+@article{mCPastro,
+  title = {Astrophysical bounds on millicharged particles in models with a paraphoton},
+  author = {Davidson, Sacha and Peskin, Michael},
+  journal = {Phys. Rev. D},
+  volume = {49},
+  issue = {4},
+  pages = {2114--2117},
+  numpages = {0},
+  year = {1994},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.49.2114},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.49.2114}
+}
+@article{mCPPositronium,
+      author         = "Badertscher, A. and Crivelli, P. and Fetscher, W. and
+                        Gendotti, U. and Gninenko, S. and Postoev, V. and Rubbia,
+                        A. and Samoylenko, V. and Sillou, D.",
+      title          = "{An Improved Limit on Invisible Decays of Positronium}",
+      journal        = "Phys. Rev.",
+      volume         = "D75",
+      year           = "2007",
+      pages          = "032004",
+      doi            = "10.1103/PhysRevD.75.032004",
+      eprint         = "hep-ex/0609059",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/0609059;%%"
+}
+@article{mCPcosmology,
+      author         = "Melchiorri, Alessandro and Polosa, Antonello and Strumia,
+                        Alessandro",
+      title          = "{New bounds on millicharged particles from cosmology}",
+      journal        = "Phys. Lett.",
+      volume         = "B650",
+      year           = "2007",
+      pages          = "416-420",
+      doi            = "10.1016/j.physletb.2007.05.042",
+      eprint         = "hep-ph/0703144",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IFUP-TH-07-06",
+      SLACcitation   = "%%CITATION = HEP-PH/0703144;%%"
+}
+@article{mCPCoulomb,
+      author         = "Jaeckel, Joerg",
+      title          = "{Probing Minicharged Particles with Tests of Coulomb's
+                        Law}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "103",
+      year           = "2009",
+      pages          = "080402",
+      doi            = "10.1103/PhysRevLett.103.080402",
+      eprint         = "0904.1547",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-09-30, DCPT-09-60",
+      SLACcitation   = "%%CITATION = ARXIV:0904.1547;%%"
+}
+
