--- a/LLP.tex
+++ b/LLP.tex
@@ -55,6 +55,7 @@ floatfix,
 \usepackage{blindtext}
 \usepackage{longtable}
 \usepackage[utf8]{inputenc}
+\linespread{1.6}
 %\counterwithin{figure}{section}
 %\counterwithin{table}{section}
 %\usepackage{hyperref}% add hypertext capabilities
@@ -117,13 +118,9 @@ In both Standard Model (SM) and Beyond Standard Model (BSM) extensions, particle
 \input{Summary.tex}
 
 
-\begin{acknowledgments}
-We wish to acknowledge the support of the author community in using
-REV\TeX{}, offering suggestions and encouragement, testing new versions,
-\dots.
-\end{acknowledgments}
 
 \appendix
+
 
 
 % The \nocite command causes all entries in a bibliography to be printed out
